# curl-executor-agent

./: README.md  pyproject.toml  report.md
src/executor/: crew.py  main.py
src/executor/config/: agents.yaml  tasks.yaml
src/executor/tools/: api_caller_tool.py
