[project]
name = "executor"
version = "0.1.0"
description = "executor using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "agentops>=0.4.13",
    "crewai[tools]>=0.121.1,<1.0.0",
    "pydantic>=2.11.5",
]

[project.scripts]
executor = "executor.main:run"
run_crew = "executor.main:run"
train = "executor.main:train"
replay = "executor.main:replay"
test = "executor.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
